Increase image shifting left and right and fix typesetting

--- a/team_member.css
+++ b/team_member.css
@@ -79,9 +79,6 @@ p {
 .text_personality{
     width: 85%;
     height: auto;
-    margin-top:15%;
-    margin-bottom:5%;
-
 }
 
 .pic_personality{
